--- a/.github/gh-pages.yml
+++ b/.github/gh-pages.yml
@@ -32,7 +32,5 @@ jobs:
         if: ${{ github.ref == 'refs/heads/main' }}
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_branch: main
+          publish_branch: gh-pages
           publish_dir: ./public
-          # Add this line to deploy contents of public/ to root
-          destination_dir: ./
