--- a/hugo.toml
+++ b/hugo.toml
@@ -1,3 +1,3 @@
-baseURL = 'https://example.org/'
+baseURL = 'https://LeTT00r.github.io/homepage/'
 languageCode = 'en-us'
 title = 'Michael Bjeski and his online presence'
